--- a/Solution.vcxproj
+++ b/Solution.vcxproj
@@ -97,6 +97,7 @@
   </ItemGroup>
   <ItemGroup>
     <CudaCompile Include="dataStructures.h" />
+    <ClInclude Include="camera.h" />
     <ClInclude Include="imgui\imconfig.h" />
     <ClInclude Include="imgui\imgui.h" />
     <ClInclude Include="imgui\imgui_impl_glfw.h" />
