--- a/Solution.vcxproj
+++ b/Solution.vcxproj
@@ -113,6 +113,9 @@
     <CudaCompile Include="random.h" />
     <CudaCompile Include="vec3.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="README.md" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
     <Import Project="$(VCTargetsPath)\BuildCustomizations\CUDA 12.9.targets" />
