--- a/Solution.vcxproj
+++ b/Solution.vcxproj
@@ -99,6 +99,8 @@
     <CudaCompile Include="thread.h" />
     <CudaCompile Include="dataStructures.h" />
     <ClInclude Include="camera.h" />
+    <CudaCompile Include="cuda_interop.h" />
+    <ClInclude Include="gui.h" />
     <ClInclude Include="imgui\imconfig.h" />
     <ClInclude Include="imgui\imgui.h" />
     <ClInclude Include="imgui\imgui_impl_glfw.h" />
@@ -108,7 +110,7 @@
     <ClInclude Include="imgui\imstb_rectpack.h" />
     <ClInclude Include="imgui\imstb_textedit.h" />
     <ClInclude Include="imgui\imstb_truetype.h" />
-    <CudaCompile Include="interopRenderer.h" />
+    <CudaCompile Include="opengl_manager.h" />
     <CudaCompile Include="kernel.h" />
     <CudaCompile Include="quaternions.h" />
     <CudaCompile Include="random.h" />
