--- a/Solution.vcxproj
+++ b/Solution.vcxproj
@@ -110,7 +110,7 @@
     <ClInclude Include="imgui\imstb_rectpack.h" />
     <ClInclude Include="imgui\imstb_textedit.h" />
     <ClInclude Include="imgui\imstb_truetype.h" />
-    <CudaCompile Include="opengl_manager.h" />
+    <CudaCompile Include="opengl.h" />
     <CudaCompile Include="kernel.h" />
     <CudaCompile Include="quaternions.h" />
     <CudaCompile Include="random.h" />
