--- a/Solution.vcxproj.filters
+++ b/Solution.vcxproj.filters
@@ -74,9 +74,6 @@
     <ClInclude Include="imgui\imstb_truetype.h">
       <Filter>Header Files\ImGui</Filter>
     </ClInclude>
-    <ClInclude Include="camera.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="gui.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -100,13 +97,16 @@
     <CudaCompile Include="opengl.h">
       <Filter>Header Files</Filter>
     </CudaCompile>
-    <CudaCompile Include="DataStructures.h">
+    <CudaCompile Include="structs.h">
       <Filter>Header Files</Filter>
     </CudaCompile>
     <CudaCompile Include="thread.h">
       <Filter>Header Files</Filter>
     </CudaCompile>
-    <CudaCompile Include="cuda_interop.h">
+    <CudaCompile Include="cuda.h">
+      <Filter>Header Files</Filter>
+    </CudaCompile>
+    <CudaCompile Include="input.h">
       <Filter>Header Files</Filter>
     </CudaCompile>
   </ItemGroup>
