--- a/Solution.vcxproj
+++ b/Solution.vcxproj
@@ -99,8 +99,7 @@
     <CudaCompile Include="input.h" />
     <CudaCompile Include="thread.h" />
     <CudaCompile Include="structs.h" />
-    <CudaCompile Include="cuda.h" />
-    <ClInclude Include="gui.h" />
+    <CudaCompile Include="gui.h" />
     <ClInclude Include="imgui\imconfig.h" />
     <ClInclude Include="imgui\imgui.h" />
     <ClInclude Include="imgui\imgui_impl_glfw.h" />
