--- a/Solution.vcxproj.filters
+++ b/Solution.vcxproj.filters
@@ -74,9 +74,6 @@
     <ClInclude Include="imgui\imstb_truetype.h">
       <Filter>Header Files\ImGui</Filter>
     </ClInclude>
-    <ClInclude Include="gui.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <CudaCompile Include="Main.cpp">
@@ -103,10 +100,10 @@
     <CudaCompile Include="thread.h">
       <Filter>Header Files</Filter>
     </CudaCompile>
-    <CudaCompile Include="cuda.h">
+    <CudaCompile Include="input.h">
       <Filter>Header Files</Filter>
     </CudaCompile>
-    <CudaCompile Include="input.h">
+    <CudaCompile Include="gui.h">
       <Filter>Header Files</Filter>
     </CudaCompile>
   </ItemGroup>
