--- a/imgui.ini
+++ b/imgui.ini
@@ -7,6 +7,18 @@ Pos=31,21
 Size=826,358
 
 [Window][DEBUGGER]
-Pos=69,66
+Pos=118,83
 Size=603,921
+
+[Window][Second Window]
+Pos=60,60
+Size=64,70
+
+[Window][Another]
+Pos=1130,244
+Size=607,252
+
+[Window][Selected Sphere]
+Pos=1761,210
+Size=740,510
 
