--- a/Solution.vcxproj
+++ b/Solution.vcxproj
@@ -96,6 +96,7 @@
     <CudaCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <CudaCompile Include="saving.h" />
     <ClInclude Include="selector.h" />
     <CudaCompile Include="spheres.h" />
     <CudaCompile Include="input.h" />
