--- a/Solution.vcxproj.filters
+++ b/Solution.vcxproj.filters
@@ -112,6 +112,9 @@
     <CudaCompile Include="spheres.h">
       <Filter>Header Files</Filter>
     </CudaCompile>
+    <CudaCompile Include="saving.h">
+      <Filter>Header Files</Filter>
+    </CudaCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="README.md">
