--- a/imgui.ini
+++ b/imgui.ini
@@ -7,8 +7,9 @@ Pos=31,21
 Size=826,358
 
 [Window][DEBUGGER]
-Pos=59,59
+Pos=138,103
 Size=669,854
+Collapsed=1
 
 [Window][Second Window]
 Pos=60,60
@@ -19,6 +20,6 @@ Pos=1130,244
 Size=607,252
 
 [Window][Selected Sphere]
-Pos=1936,167
-Size=740,502
+Pos=1947,167
+Size=812,690
 
