about to turn opengl struct into a class

--- a/Solution.vcxproj
+++ b/Solution.vcxproj
@@ -97,6 +97,7 @@
   </ItemGroup>
   <ItemGroup>
     <CudaCompile Include="saving.h" />
+    <CudaCompile Include="framerate.h" />
     <ClInclude Include="selector.h" />
     <CudaCompile Include="spheres.h" />
     <CudaCompile Include="input.h" />
