madam president, the cube is confirmed pink

--- a/Solution.vcxproj
+++ b/Solution.vcxproj
@@ -98,6 +98,7 @@
   <ItemGroup>
     <CudaCompile Include="saving.h" />
     <CudaCompile Include="framerate.h" />
+    <CudaCompile Include="boxes.h" />
     <ClInclude Include="selector.h" />
     <CudaCompile Include="spheres.h" />
     <CudaCompile Include="input.h" />
