--- a/imgui.ini
+++ b/imgui.ini
@@ -19,6 +19,10 @@ Pos=1130,244
 Size=607,252
 
 [Window][Selected Sphere]
-Pos=1962,152
+Pos=2005,148
 Size=733,688
+
+[Window][Selected Box]
+Pos=1840,901
+Size=749,538
 
