--- a/Solution.vcxproj
+++ b/Solution.vcxproj
@@ -99,6 +99,7 @@
     <CudaCompile Include="saving.h" />
     <CudaCompile Include="framerate.h" />
     <CudaCompile Include="boxes.h" />
+    <CudaCompile Include="sharedarray.h" />
     <ClInclude Include="selector.h" />
     <CudaCompile Include="spheres.h" />
     <CudaCompile Include="input.h" />
