--- a/Solution.vcxproj.filters
+++ b/Solution.vcxproj.filters
@@ -121,6 +121,9 @@
     <CudaCompile Include="boxes.h">
       <Filter>Header Files</Filter>
     </CudaCompile>
+    <CudaCompile Include="sharedarray.h">
+      <Filter>Header Files</Filter>
+    </CudaCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="README.md">
