--- a/imgui.ini
+++ b/imgui.ini
@@ -7,7 +7,7 @@ Pos=31,21
 Size=826,358
 
 [Window][DEBUGGER]
-Pos=66,69
+Pos=41,36
 Size=661,980
 
 [Window][Second Window]
@@ -19,10 +19,14 @@ Pos=1130,244
 Size=607,252
 
 [Window][Selected Sphere]
-Pos=1905,70
+Pos=1449,0
 Size=733,642
 
 [Window][Selected Box]
-Pos=1881,147
+Pos=1475,54
 Size=749,638
+
+[Window][Main Menu]
+Pos=60,60
+Size=644,932
 
