polish, crash fix

--- a/imgui.ini
+++ b/imgui.ini
@@ -19,7 +19,7 @@ Pos=1130,244
 Size=607,252
 
 [Window][Selected Sphere]
-Pos=2106,43
+Pos=2106,42
 Size=733,642
 
 [Window][Selected Box]
@@ -29,4 +29,8 @@ Size=749,638
 [Window][Main Menu]
 Pos=35,31
 Size=771,1180
+
+[Window][Exit Menu]
+Pos=39,1609
+Size=271,159
 
